Added automatic checking of the time of the last status update
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@12768 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/imsApp/Db/Makefile
+++ b/imsApp/Db/Makefile
@@ -10,6 +10,7 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install)
 # databases, templates, substitutions like this
+DB_INSTALLS += check_update.db
 DB_INSTALLS += ims.db
 
 #----------------------------------------------------
