Do autosave the old way, tie up loose ends
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@13895 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -1,22 +1,46 @@
 # IMS autosave list
-.DESC
-.EGU
-.SREV
-.UREV
-.ERES
-.DIR
-.OFF
-.BDST
-.ACCL
-.VBAS
-.VELO
-.VMAX
-.BVEL
-.TWV
-.LLM
-.HLM
-.DLLM
-.DHLM
-.RDBD
-.PDBD
+$(MOTOR).DESC
+$(MOTOR).PORT
+$(MOTOR).EGU
+$(MOTOR).UREV
+$(MOTOR).SREV
+$(MOTOR).MS
+$(MOTOR).DE
+$(MOTOR).EE
+$(MOTOR).EL
+$(MOTOR).RC
+$(MOTOR).HC
+$(MOTOR).HCSV
+$(MOTOR).MT
+$(MOTOR).MODE
+$(MOTOR).DIR
+$(MOTOR).OFF
+$(MOTOR).FOFF
+$(MOTOR).BDST
+$(MOTOR).ACCL
+$(MOTOR).BACC
+$(MOTOR).HACC
+$(MOTOR).VBAS
+$(MOTOR).VMAX
+$(MOTOR).VELO
+$(MOTOR).SBAS
+$(MOTOR).SMAX
+$(MOTOR).S
+$(MOTOR).BVEL
+$(MOTOR).BS
+$(MOTOR).HVEL
+$(MOTOR).HS
+$(MOTOR).HTYP
+$(MOTOR).HDIR
+$(MOTOR).TWV
+$(MOTOR).LLM
+$(MOTOR).HLM
+$(MOTOR).DLLM
+$(MOTOR).DHLM
+$(MOTOR).RDBD
+$(MOTOR).PDBD
+$(MOTOR).EGAG
+$(MOTOR).ERBL
+$(MOTOR).ESKL
+$(MOTOR).ETWV
 
