Tie up loose ends
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@13906 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -5,7 +5,6 @@ $(MOTOR).EGU
 $(MOTOR).UREV
 $(MOTOR).SREV
 $(MOTOR).MS
-$(MOTOR).DE
 $(MOTOR).EE
 $(MOTOR).EL
 $(MOTOR).RC
@@ -31,7 +30,7 @@ $(MOTOR).BS
 $(MOTOR).HVEL
 $(MOTOR).HS
 $(MOTOR).HTYP
-$(MOTOR).HDIR
+$(MOTOR).HEGE
 $(MOTOR).TWV
 $(MOTOR).LLM
 $(MOTOR).HLM
