--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -4,13 +4,19 @@ $(MOTOR).PORT
 $(MOTOR).EGU
 $(MOTOR).UREV
 $(MOTOR).SREV
-$(MOTOR).MS
+$(MOTOR).LM
+$(MOTOR).SM
+$(MOTOR).SF
+$(MOTOR).STSV
 $(MOTOR).EE
 $(MOTOR).EL
+$(MOTOR).MS
+$(MOTOR).MT
+$(MOTOR).HT
+$(MOTOR).ES
 $(MOTOR).RC
 $(MOTOR).HC
 $(MOTOR).HCSV
-$(MOTOR).MT
 $(MOTOR).MODE
 $(MOTOR).DIR
 $(MOTOR).OFF
