Let the user decide whether to alarm on stall and error
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@13956 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -8,6 +8,7 @@ $(MOTOR).LM
 $(MOTOR).SM
 $(MOTOR).SF
 $(MOTOR).STSV
+$(MOTOR).ERSV
 $(MOTOR).EE
 $(MOTOR).EL
 $(MOTOR).MS
@@ -23,30 +24,34 @@ $(MOTOR).OFF
 $(MOTOR).FOFF
 $(MOTOR).BDST
 $(MOTOR).HDST
-$(MOTOR).ACCL
-$(MOTOR).BACC
-$(MOTOR).HACC
-$(MOTOR).VBAS
-$(MOTOR).VMAX
-$(MOTOR).VELO
-$(MOTOR).SBAS
-$(MOTOR).SMAX
-$(MOTOR).S
-$(MOTOR).BVEL
-$(MOTOR).BS
-$(MOTOR).HVEL
-$(MOTOR).HS
 $(MOTOR).HTYP
 $(MOTOR).HEGE
-$(MOTOR).TWV
 $(MOTOR).LLM
 $(MOTOR).HLM
 $(MOTOR).DLLM
 $(MOTOR).DHLM
+$(MOTOR).RTRY
 $(MOTOR).RDBD
 $(MOTOR).PDBD
 $(MOTOR).EGAG
 $(MOTOR).ERBL
 $(MOTOR).ESKL
 $(MOTOR).ETWV
+$(MOTOR).SBAS
+$(MOTOR).SMAX
+$(MOTOR).S
+$(MOTOR).VBAS
+$(MOTOR).VMAX
+$(MOTOR).VELO
+$(MOTOR).BS
+$(MOTOR).BVEL
+$(MOTOR).HS
+$(MOTOR).HVEL
+$(MOTOR).ACCL
+$(MOTOR).BACC
+$(MOTOR).HACC
+$(MOTOR).TWV
+
+$(MOTOR):FWD_MEANS
+$(MOTOR):REV_MEANS
 
