--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -1,9 +1,7 @@
 # IMS autosave list
 $(MOTOR).DESC
+$(MOTOR).TYPE
 $(MOTOR).PORT
-$(MOTOR).EGU
-$(MOTOR).UREV
-$(MOTOR).SREV
 $(MOTOR).LM
 $(MOTOR).SM
 $(MOTOR).SF
@@ -17,8 +15,11 @@ $(MOTOR).HT
 $(MOTOR).ES
 $(MOTOR).RC
 $(MOTOR).HC
-$(MOTOR).HCSV
+$(MOTOR).DVER
 $(MOTOR).MODE
+$(MOTOR).EGU
+$(MOTOR).UREV
+$(MOTOR).SREV
 $(MOTOR).DIR
 $(MOTOR).OFF
 $(MOTOR).FOFF
@@ -26,10 +27,10 @@ $(MOTOR).BDST
 $(MOTOR).HDST
 $(MOTOR).HTYP
 $(MOTOR).HEGE
-$(MOTOR).LLM
-$(MOTOR).HLM
 $(MOTOR).DLLM
 $(MOTOR).DHLM
+$(MOTOR).LLM
+$(MOTOR).HLM
 $(MOTOR).RTRY
 $(MOTOR).RDBD
 $(MOTOR).PDBD
@@ -53,6 +54,18 @@ $(MOTOR).HACC
 $(MOTOR).TWV
 
 $(MOTOR).DLVL
+
+$(MOTOR).VAL
+$(MOTOR).DVAL
+$(MOTOR).RVAL
+$(MOTOR).RRBV
+$(MOTOR).DRBV
+$(MOTOR).RBV
+
+$(MOTOR).EVAL
+$(MOTOR).ERBV
+
+$(MOTOR).HCSV
 
 $(MOTOR):FWD_MEANS
 $(MOTOR):REV_MEANS
