--- a/imsApp/Db/ims_autosave.template
+++ b/imsApp/Db/ims_autosave.template
@@ -13,7 +13,9 @@ $(MOTOR).MS
 $(MOTOR).MT
 $(MOTOR).HT
 $(MOTOR).ES
+$(MOTOR).RCMX
 $(MOTOR).RC
+$(MOTOR).HCMX
 $(MOTOR).HC
 $(MOTOR).DVER
 $(MOTOR).MODE
@@ -37,7 +39,6 @@ $(MOTOR).PDBD
 $(MOTOR).EGAG
 $(MOTOR).ERBL
 $(MOTOR).ESKL
-$(MOTOR).ETWV
 $(MOTOR).SBAS
 $(MOTOR).SMAX
 $(MOTOR).S
