Added HOST and IOCN fields Various small tweaks
git-svn-id: file:///afs/slac/g/pcds/vol2/svn/pcds/epics/trunk/modules/IMS/current@15093 ececa60f-9f63-0410-97c7-ea05888eb260

--- a/imsApp/Db/Makefile
+++ b/imsApp/Db/Makefile
@@ -16,12 +16,12 @@ DB_INSTALLS += ims.db
 #----------------------------------------------------
 # Create and install (or just install)
 # Archive files, templates, substitutions like this
-ARCHIVE += ims_archive.template
+ARCHIVE += ims_archive.tpl-arch
 
 #----------------------------------------------------
 # Create and install (or just install)
 # Autosave request files, templates, substitutions like this
-REQ     += ims_autosave.template
+REQ     += ims_autosave.tpl-req
 
 
 include $(TOP)/configure/RULES
