--- a/imsApp/Db/Makefile
+++ b/imsApp/Db/Makefile
@@ -10,9 +10,9 @@ include $(TOP)/configure/CONFIG
 #----------------------------------------------------
 # Create and install (or just install)
 # databases, templates, substitutions like this
-DB_INSTALLS += check_update.db
-DB_INSTALLS += ims_short.db
-DB_INSTALLS += ims_long.db
+DB += check_update.db
+DB += ims_short.db
+DB += ims_long.db
 
 #----------------------------------------------------
 # Create and install (or just install)
